THAY DOI DATABASE VA CAU TRUC CHINH TA CUA APP